@@ -343,7 +343,9 @@ static const char * const h_sounds[] = {
     "beep", "boing", "sing", "belche", "creak", "cough", "rattle",
     "ululate", "pop", "jingle", "sniffle", "tinkle", "eep",
     "clatter", "hum", "sizzle", "twitter", "wheeze", "rustle",
-    "honk", "lisp", "yodel", "coo", "burp", "moo",
+    "honk", "lisp", "yodel", "coo", "burp", "moo", "boom",
+    "murmur", "oink", "quack", "rumble", "twang", "bellow",
+    "toot", "gargle", "hoot", "warble"
 };
 
 const char *
